<resources>
    <string name="app_name">DSM_AppCliente</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_btn_ordenar">Ordenar</string>
    <string name="text_btn_filtrar">Filtrar</string>
    <string name="tv_descripción">Descripción</string>
    <string name="tv_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="tv_especificaciones">Especificaciones</string>
    <string name="fab_add_car">Agregar producto</string>
    <string name="description_img">Imagen del producto</string>
    <string name="specifications_tools">Nombre esp - texto\nNombre esp - texto\nNombre esp - texto</string>
    <string name="label_tienda">Tienda</string>
    <string name="_1">1</string>
    <string name="description_btn_remove">boton para reducir cantidad</string>
    <string name="description_btn_add">Boton para añadir</string>
    <string name="txt_buscar">Buscar</string>
    <string name="hint_search">Buscar en minimarket de barrio</string>
</resources>